--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -7,7 +7,7 @@
 default: &default
   adapter: postgresql
   host: 127.0.0.1
-  password: '123qwe'
+  password: 'example'
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
